<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vk15puzzle</string>
    <string name="tvKolDvizN">Движений:</string>
    <string name="settings">Настройки</string>
    <string name="rate">Оценить на Google PLay</string>
    <string name="getpro">Купить PRO-версию</string>
    <string name="share">Поделиться</string>
    <string name="about">О программе</string>
    <string name="sharetext">Пятнашки Вконтакте. (Скачай приложение на Google Play) https://play.google.com/store/apps/details?id=com.rappasocial.vk15puzzle</string>
    <string name="startgame">Играть</string>
    <string name="admob_id">a151d95f331cf34</string>
    <string name="easy">Легко 3 х 3</string>
    <string name="medium">Сложно 4 х 4 (Доступно в Pro-версии)</string>
    <string name="hard">Очень сложно 5 х 5 (Доступно в Pro-версии)</string>
    <string name="gplaynotfound">Не найдено приложение Google Play</string>
    <string name="abouttext">Собирай пятнашки из аватарок своих друзей Вконтакте.</string>
    
</resources>