<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/bg_pattern_main"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btLevelEasy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/easy" />

    <Button
        android:id="@+id/btLevelMedium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:enabled="false"
        android:text="@string/medium" />
    
    <Button
        android:id="@+id/btLevelHard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:enabled="false"
        android:text="@string/hard" />
    

</LinearLayout>
